@@ -66,6 +66,7 @@ import org.dspace.content.Collection;
 import org.dspace.content.Community;
 import org.dspace.content.DSpaceObject;
 import org.dspace.content.Item;
+import org.dspace.app.util.Util;
 import org.dspace.core.ConfigurationManager;
 import org.dspace.core.Constants;
 import org.xml.sax.SAXException;
@@ -73,7 +74,7 @@ import org.xml.sax.SAXException;
 /**
  * This transform applys the basic navigational links that should be available
  * on all pages generated by DSpace.
- * 
+ *
  * @author Scott Phillips
  */
 public class Navigation extends AbstractDSpaceTransformer implements CacheableProcessingComponent
@@ -108,7 +109,7 @@ public class Navigation extends AbstractDSpaceTransformer implements CacheablePr
                 key += "-" + dso.getHandle();
 
             return HashUtil.hash(key);
-        } 
+        }
         catch (SQLException sqle)
         {
             // Ignore all errors and just return that the component is not cachable.
@@ -118,7 +119,7 @@ public class Navigation extends AbstractDSpaceTransformer implements CacheablePr
 
     /**
      * Generate the cache validity object.
-     * 
+     *
      * The cache is always valid.
      */
     public SourceValidity getValidity() {
@@ -127,23 +128,23 @@ public class Navigation extends AbstractDSpaceTransformer implements CacheablePr
     
     /**
      * Add the basic navigational options:
-     * 
+     *
      * Search - advanced search
-     * 
+     *
      * browse - browse by Titles - browse by Authors - browse by Dates
-     * 
+     *
      * language FIXME: add languages
-     * 
+     *
      * context no context options are added.
-     * 
+     *
      * action no action options are added.
      */
     public void addOptions(Options options) throws SAXException, WingException,
             UIException, SQLException, IOException, AuthorizeException
     {
-    	/* Create skeleton menu structure to ensure consistent order between aspects,
-    	 * even if they are never used 
-    	 */
+        /* Create skeleton menu structure to ensure consistent order between aspects,
+         * even if they are never used
+         */
         List browse = options.addList("browse");
         options.addList("account");
         options.addList("context");
@@ -196,28 +197,34 @@ public class Navigation extends AbstractDSpaceTransformer implements CacheablePr
     {
         // FIXME: I don't think these should be set here, but there needed and I'm
         // not sure where else it could go. Perhaps the linkResolver?
-    	Request request = ObjectModelHelper.getRequest(objectModel);
+        Request request = ObjectModelHelper.getRequest(objectModel);
         pageMeta.addMetadata("contextPath").addContent(contextPath);
         pageMeta.addMetadata("request","queryString").addContent(request.getQueryString());
         pageMeta.addMetadata("request","scheme").addContent(request.getScheme());
         pageMeta.addMetadata("request","serverPort").addContent(request.getServerPort());
         pageMeta.addMetadata("request","serverName").addContent(request.getServerName());
         pageMeta.addMetadata("request","URI").addContent(request.getSitemapURI());
+
+        String dspaceVersion = Util.getSourceVersion();
+        if (dspaceVersion != null)
+        {
+            pageMeta.addMetadata("dspace","version").addContent(dspaceVersion);
+        }
         
         String analyticsKey = ConfigurationManager.getProperty("xmlui.google.analytics.key");
         if (analyticsKey != null && analyticsKey.length() > 0)
         {
-        	analyticsKey = analyticsKey.trim();
-        	pageMeta.addMetadata("google","analytics").addContent(analyticsKey);
+                analyticsKey = analyticsKey.trim();
+                pageMeta.addMetadata("google","analytics").addContent(analyticsKey);
         }
         
         // add metadata for OpenSearch auto-discovery links if enabled
         if (ConfigurationManager.getBooleanProperty("websvc.opensearch.autolink"))
         {
             pageMeta.addMetadata("opensearch", "shortName").addContent(
-        			ConfigurationManager.getProperty("websvc.opensearch.shortname"));
+                                ConfigurationManager.getProperty("websvc.opensearch.shortname"));
             pageMeta.addMetadata("opensearch", "context").addContent(
-            		ConfigurationManager.getProperty("websvc.opensearch.svccontext"));
+                        ConfigurationManager.getProperty("websvc.opensearch.svccontext"));
         }
         
         // Add metadata for quick searches:
@@ -250,7 +257,7 @@ public class Navigation extends AbstractDSpaceTransformer implements CacheablePr
 
     /**
      * Add navigation for the configured browse tables to the supplied list.
-     * 
+     *
      * @param browseList
      * @param browseURL
      * @throws WingException
